--- a/main/templates/main/post/post_detail.html
+++ b/main/templates/main/post/post_detail.html
@@ -7,7 +7,7 @@
 
 
     <div class="row">
-     {% elif obj.is_recipe %}
+     {% if obj.is_recipe %}
     <div id="full-post" itemscope itemtype="http://schema.org/Recipe">
     {% else %}
     <div id="full-post" itemscope itemtype="http://schema.org/Product">
