--- a/main/templates/main/account/email/email_confirmation_message.html
+++ b/main/templates/main/account/email/email_confirmation_message.html
@@ -1,7 +1,9 @@
-{% load account %}{% spaceless %}{% with site_name=current_site.name site_domain=current_site.domain  %}
-<p>Приветствуем Вас с {{ site_name }}!</p>
-<p>Вы получили это письмо, поскольку пользователь {% user_display user %} на {{ site_domain }} указал Ваш адрес электронной почты.</p>
-<p>Чтобы подтвердить, что это Ваш адрес, пожалуйста, пройдите по этой ссылке <a href="{{ activate_url }}">{{ activate_url }}</a></p>
+{% load account %}{% spaceless %}{% with site_name=current_site.name site_domain=current_site.domain %}
+    <p>Приветствуем Вас с {{ site_name }}!</p>
+    <p>Вы получили это письмо, поскольку пользователь {% user_display user %} на {{ site_domain }} указал Ваш адрес
+        электронной почты.</p>
+    <p>Чтобы подтвердить, что это Ваш адрес, пожалуйста, пройдите по этой ссылке <a
+            href="{{ activate_url }}">{{ activate_url }}</a></p>
 {% endwith %}
-<p>Cпасибо!</p>{% endspaceless %}
+    <p>Cпасибо!</p>{% endspaceless %}
 
