--- a/main/templates/main/base/base.html
+++ b/main/templates/main/base/base.html
@@ -4,58 +4,58 @@
 <!DOCTYPE html>
 <html lang="ru">
 {% block head %}
- <head>
-     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-{% metatags %}
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        {% metatags %}
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <!-- Bootstrap -->
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+        <!-- Bootstrap -->
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
-     <link rel="stylesheet" type="text/css" href="{% static "main/css/styles.css" %}">
-     <link rel="shortcut icon" href="{% static "main/images/favicon.ico" %}" type="image/x-icon">
-     <!-- Optional theme -->
-<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css"> -->
+        <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
+        <link rel="stylesheet" type="text/css" href="{% static "main/css/styles.css" %}">
+        <link rel="shortcut icon" href="{% static "main/images/favicon.ico" %}" type="image/x-icon">
+        <!-- Optional theme -->
+        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css"> -->
 
- <link href='https://fonts.googleapis.com/css?family=Roboto:700' rel='stylesheet' type='text/css'>
-<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Roboto:700' rel='stylesheet' type='text/css'>
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
- </head>
+    </head>
 
 {% endblock head %}
 
 
 <body itemscope itemtype="http://schema.org/WebPage">
 <div class="container">
-{% block header %}
-    <div id="header">
-    <div class="row" id="top-header">
-<div class="col-lg-offset-1 col-lg-8 col-sm-9" id="top-logo">
+    {% block header %}
+        <div id="header">
+        <div class="row" id="top-header">
+            <div class="col-lg-offset-1 col-lg-8 col-sm-9" id="top-logo">
 
-				<a href="/"></a>
+                <a href="/"></a>
 
-				</div>
-        <div class="col-sm-3" id="user-info-top">
-    {% include 'super_model/user/_user_info_top.html' %}
-</div>
-</div>
-    <div class="row" id="bottom-header">
-        <div class="col-md-offset-1 col-md-3">
-					{% search_form %}
-		</div>
-        <div class="col-xs-8">
-            <div id="mission-block">
-            <a href="{% url 'mission' %}">О проекте</a>
-             </div>
-		</div>
-</div>
+            </div>
+            <div class="col-sm-3" id="user-info-top">
+                {% include 'super_model/user/_user_info_top.html' %}
+            </div>
+        </div>
+        <div class="row" id="bottom-header">
+            <div class="col-md-offset-1 col-md-3">
+                {% search_form %}
+            </div>
+            <div class="col-xs-8">
+                <div id="mission-block">
+                    <a href="{% url 'mission' %}">О проекте</a>
+                </div>
+            </div>
+        </div>
 
 
 
@@ -63,58 +63,62 @@
 
 
     {% endblock header %}
-</div>
+    </div>
 
-<div class="row">
-<div class="col-lg-2 col-md-3 col-sm-3 hidden-xs" id="sidebar-left">
-    {% block sidebar_left %}
-{% best_posts 'Популярные рецепты' %}
-{% best_comments 'Популярные сообщения' %}
-{% endblock sidebar_left %}
-</div>
-<div class="col-lg-8 col-md-9 col-sm-9 col-xs-12" id="middle-section">
-{% block breadcrumbs %}
-{% breadcrumbs %}
-{% endblock breadcrumbs %}
+    <div class="row">
+        <div class="col-lg-2 col-md-3 col-sm-3 hidden-xs" id="sidebar-left">
+            {% block sidebar_left %}
+                {% best_posts 'Популярные рецепты' %}
+                {% best_comments 'Популярные сообщения' %}
+            {% endblock sidebar_left %}
+        </div>
+        <div class="col-lg-8 col-md-9 col-sm-9 col-xs-12" id="middle-section">
+            {% block breadcrumbs %}
+                {% breadcrumbs %}
+            {% endblock breadcrumbs %}
 
 
-{% block content %}
+            {% block content %}
 
-{% endblock content %}
-</div>
+            {% endblock content %}
+        </div>
 
-<div class="col-lg-2 hidden-md hidden-sm hidden-xs" id="sidebar-right">
-{% block sidebar_right %}
-{% if user.is_authenticated %}
-    {% pending_recipes user %}
-{% pending_comments user %}
-    {% user_menu %}
-{% endif %}
- {% recent_posts 'Новые рецепты' %}
- {% recent_comments 'Новые сообщения' %}
-{% endblock sidebar_right %}
-{% if user.is_regular %}
-{% get_contact_form %}
-{% endif %}
- </div>
-</div>
+        <div class="col-lg-2 hidden-md hidden-sm hidden-xs" id="sidebar-right">
+            {% block sidebar_right %}
+                {% if user.is_authenticated %}
+                    {% pending_recipes user %}
+                    {% pending_comments user %}
+                    {% user_menu %}
+                {% endif %}
+                {% recent_posts 'Новые рецепты' %}
+                {% recent_comments 'Новые сообщения' %}
+            {% endblock sidebar_right %}
+            {% if user.is_regular %}
+                {% get_contact_form %}
+            {% endif %}
+        </div>
+    </div>
 
-<div class="row" id="footer">
-{% block footer %}
- <p id="footer-info">
-    Вся информация на сайте предоставляется исключительно в справочных целях. Напоминаем, что самолечение недопустимо и в случае заболевания рекомендуем обратиться к врачу.
-    Перед применением любого лекарственного растения обязательно проконсультируйтесь с врачом.
-</p>
+    <div class="row" id="footer">
+        {% block footer %}
+            <p id="footer-info">
+                Вся информация на сайте предоставляется исключительно в справочных целях. Напоминаем, что самолечение
+                недопустимо и в случае заболевания рекомендуем обратиться к врачу.
+                Перед применением любого лекарственного растения обязательно проконсультируйтесь с врачом.
+            </p>
 
-<p id="site-info">
-    Авторское право © 2015-2016 Medavi.Ru. Все права на материалы, размещенные на сайте, защищены в соответствии с российским и международным законодательством об авторском праве и смежных правах. При любом использовании материалов сайта ссылка (для интернет-сайтов — гиперссылка) на Medavi.ru обязательна. По вопросам работы сайта обращайтесь на info@medavi.ru
-</p>
-{% endblock footer %}
-</div>
+            <p id="site-info">
+                Авторское право © 2015-2017 Medavi.Ru. Все права на материалы, размещенные на сайте, защищены в
+                соответствии с российским и международным законодательством об авторском праве и смежных правах. При
+                любом использовании материалов сайта ссылка (для интернет-сайтов — гиперссылка) на Medavi.ru
+                обязательна. По вопросам работы сайта обращайтесь на info@medavi.ru
+            </p>
+        {% endblock footer %}
+    </div>
 </div>
 </body>
 
 {% block bottom_scripts %}
-{% include 'main/base/_bottom_scripts.html' %}
+    {% include 'main/base/_bottom_scripts.html' %}
 {% endblock bottom_scripts %}
 </html>
