--- a/main/templates/main/comment/email/confirm_comment_html_template.html
+++ b/main/templates/main/comment/email/confirm_comment_html_template.html
@@ -1,5 +1,6 @@
 <p>Здравствуйте!</p>
 <p>Вы оставили отзыв <a href="{{ site_url }}{{ comment.get_absolute_url }}">{{ comment }}</a> на сайте Medavi.ru.</p>
-<p>Для того, чтобы подтвердить, что это Ваш электронный адрес, пройдите, пожалуйста по этой <a href="{{ site_url }}{{ comment.get_confirm_url }}">ссылке</a>.</p>
+<p>Для того, чтобы подтвердить, что это Ваш электронный адрес, пройдите, пожалуйста по этой <a
+        href="{{ site_url }}{{ comment.get_confirm_url }}">ссылке</a>.</p>
 
 
