Rambler counter changed to https

--- a/main/templates/main/base/_bottom_scripts.html
+++ b/main/templates/main/base/_bottom_scripts.html
@@ -147,7 +147,7 @@
     <script id="top100Counter" type="text/javascript" src="http://counter.rambler.ru/top100.jcn?4413399"></script>
     <noscript>
         <a href="http://top100.rambler.ru/navi/4413399/">
-            <img src="http://counter.rambler.ru/top100.cnt?4413399" alt="Rambler's Top100" border="0"/>
+            <img src="https://counter.rambler.ru/top100.cnt?4413399" alt="Rambler's Top100" border="0"/>
         </a>
 
     </noscript>
